update graalvm compilation