@@ -129,7 +129,7 @@ dependencies {
     shade 'com.google.guava:guava:32.1.3-jre'
     shade "org.apache.commons:commons-math3:3.6.1"
     shade "org.apache.commons:commons-collections4:4.4"
-    shade "ch.qos.logback:logback-classic:1.4.11"
+    shade "ch.qos.logback:logback-classic:1.4.14"
     shade 'org.slf4j:slf4j-api:2.0.9'
     shade 'org.slf4j:jul-to-slf4j:2.0.9'
     shade 'org.fusesource.jansi:jansi:2.4.1'
@@ -236,6 +236,7 @@ tasks.register('sourceJar', Jar) {
 }
 
 shadowJar {
+    from collectReachabilityMetadata
     archiveBaseName.set(project.name)
     archiveClassifier.set('')
     archiveVersion.set('')
@@ -248,6 +249,7 @@ shadowJar {
     exclude 'META-INF/proguard/**'
     exclude 'META-INF/gradle/**'
     exclude 'META-INF/versions/**'
+    exclude 'META-INF/native-image/io.netty/**/native-image.properties'
     minimize {
         exclude(dependency("org.slf4j:slf4j-api:.*"))
         exclude(dependency("ch.qos.logback:.*:.*"))
@@ -294,84 +296,15 @@ graalvmNative {
             buildArgs.addAll(
                     "-Duser.country=US",
                     "-Duser.language=en",
-                    "--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED",
-                    "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
-                    "--add-opens=java.base/java.nio=ALL-UNNAMED",
-                    "--initialize-at-build-time=org.jline",
-                    "--initialize-at-build-time=org.fusesource.jansi",
-                    "--initialize-at-build-time=com.google.gson",
-                    '--initialize-at-build-time=org.slf4j.LoggerFactory,ch.qos.logback',
-                    '--initialize-at-build-time=org.slf4j.MDC',
-                    '--initialize-at-build-time=ch.qos.logback.classic.Level',
-                    '--initialize-at-build-time=ch.qos.logback.classic.Logger',
-                    '--initialize-at-build-time=ch.qos.logback.core.util.StatusPrinter',
-                    '--initialize-at-build-time=ch.qos.logback.core.status.StatusBase',
-                    '--initialize-at-build-time=ch.qos.logback.core.status.InfoStatus',
-                    '--initialize-at-build-time=ch.qos.logback.core.spi.AppenderAttachableImpl',
-                    '--initialize-at-build-time=org.slf4j.LoggerFactory',
-                    '--initialize-at-build-time=ch.qos.logback.core.util.Loader',
-                    '--initialize-at-build-time=org.slf4j.impl.StaticLoggerBinder',
-                    '--initialize-at-build-time=ch.qos.logback.classic.spi.ThrowableProxy',
-                    '--initialize-at-build-time=ch.qos.logback.core.CoreConstants',
-                    "--initialize-at-build-time=org.jooq",
-                    "--initialize-at-build-time=com.fasterxml",
-                    "--initialize-at-build-time=org.yaml",
-                    "--initialize-at-build-time=org.redisson",
-                    "--initialize-at-build-time=com.zaxxer",
-                    "--initialize-at-run-time=org.redisson.codec.JsonJacksonCodec",
-                    "--initialize-at-build-time=com.github",
-                    "--initialize-at-build-time=com.zenith.command",
-                    "--initialize-at-build-time=com.zenith.network",
-                    "--initialize-at-build-time=com.zenith.database",
-                    "--initialize-at-build-time=com.zenith.discord",
-                    "--initialize-at-build-time=com.zenith.event",
-                    "--initialize-at-build-time=com.zenith.cache",
-                    "--initialize-at-build-time=com.zenith.feature.spectator",
-                    "--initialize-at-run-time=com.zenith.network.registry.ZenithHandlerCodec",
-                    "--initialize-at-run-time=com.zenith.module",
-                    "--initialize-at-run-time=com.zenith.feature.autoupdater",
-                    "--initialize-at-build-time=com.google",
-                    "--initialize-at-build-time=com.collarmc",
-                    "--initialize-at-build-time=reactor",
-                    "--initialize-at-build-time=com.microsoft",
-                    "--initialize-at-build-time=com.nimbusds",
-                    "--initialize-at-build-time=com.mojang",
-                    "--initialize-at-build-time=com.googlecode",
-                    "--initialize-at-build-time=net.kyori",
-                    "--initialize-at-run-time=sun.text.resources.cldr",
-                    "--initialize-at-run-time=reactor.netty.http.client.HttpClientFormEncoder",
-                    "--initialize-at-run-time=reactor.netty.resources.DefaultLoopNativeDetector",
-                    "--initialize-at-run-time=reactor.netty.resources.DefaultLoopEpoll",
-                    "--initialize-at-run-time=reactor.netty.tcp.SslProvider",
-                    "--initialize-at-run-time=reactor.netty.http.client",
-                    "--initialize-at-run-time=reactor.netty.tcp.TcpClientSecure",
-                    "--initialize-at-run-time=io.netty.channel.epoll.Epoll",
-                    "--initialize-at-run-time=io.netty.channel.epoll.Native",
-                    "--initialize-at-run-time=io.netty.channel.epoll.EpollEventLoop",
-                    "--initialize-at-run-time=io.netty.channel.epoll.EpollEventArray",
-                    "--initialize-at-run-time=io.netty.channel.DefaultFileRegion",
-                    "--initialize-at-run-time=io.netty.channel.unix.Errors",
-                    "--initialize-at-run-time=io.netty.channel.unix.IovArray",
-                    "--initialize-at-run-time=io.netty.channel.unix.Limits",
-                    "--initialize-at-run-time=io.netty.util.internal.logging.Slf4jLogger",
-                    "--initialize-at-run-time=io.netty.channel.unix.Socket",
-                    "--initialize-at-run-time=io.netty.channel.ChannelHandlerMask",
-                    "--initialize-at-run-time=sun.net.dns.ResolverConfigurationImpl",
-                    "--initialize-at-run-time=org.jline.nativ",
-                    "--initialize-at-run-time=com.velocitypowered.natives",
                     "--enable-url-protocols=https,http",
                     "--report-unsupported-elements-at-runtime",
                     "-H:+ReportExceptionStackTraces",
                     "-H:DeadlockWatchdogInterval=30",
                     "-H:IncludeLocales=en",
-//                    "-H:DashboardDump=imageDashboardDump",
-//                    "-H:+DashboardAll",
                     "-R:MaxHeapSize=200m",
-//                    "--pgo-instrument",
                     "-march=x86-64-v3",
                     "--gc=serial",
                     "-J-XX:MaxRAMPercentage=90",
-                    "--trace-object-instantiation=com.zenith.feature.deathmessages.DeathMessageSchemaInstance",
             )
 
             configurationFileDirectories.from(file("src/main/resources/META-INF/native-image"))
